--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ iframe {
     /* filter: grayscale(100%); */
 }
 
-@media(max-width: 600px) {
+/* @media(max-width: 600px) {
     iframe {
         /* transform: scale(1.3); */
         margin-top: -100px;
         height: 150dvh;
     }
-}
+} */
